[metadata]
name = selftune_core
version = 2.0.0
author = "Anush Kini, Nagarajan Natarajan" 
author_email = "t-anushkini@microsoft.com, nagarajn@microsoft.com"

url = https://github.com/microsoft/SelfTune
description = Python bindings for SelfTune.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = selftune_core
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.8
packages = find:
package_dir =
    =src
zip_safe = True
include_package_data = True
install_requires =
    numpy>=1.19

[options.packages.find]
where = src

[options.extras_require]
dev =
    black==22.8.0
    isort==5.10.1